examples/test/testpolicy7601.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7601
  namespace: namespace116
spec:
  podSelector:
    matchLabels:
      key23: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value36
      podSelector:
        matchLabels:
          key5: value2
          key0: value9
          key27: value47
